--- a/skills/csharp/experimental/itsmskill/ITSMSkill.csproj
+++ b/skills/csharp/experimental/itsmskill/ITSMSkill.csproj
@@ -13,17 +13,17 @@
     <PackageReference Include="AdaptiveCards" Version="1.2.3" />
     <PackageReference Include="Microsoft.Azure.CognitiveServices.ContentModerator" Version="2.0.0" />
     <PackageReference Include="Microsoft.Azure.CognitiveServices.Language" Version="1.0.1-preview" />
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.ApplicationInsights" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Solutions" Version="0.9.0-daily248" />
-    <PackageReference Include="Microsoft.Bot.Configuration" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Schema" Version="4.8.0-rc4" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.ApplicationInsights" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Solutions" Version="0.9.0-daily252" />
+    <PackageReference Include="Microsoft.Bot.Configuration" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Schema" Version="4.8.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
     <PackageReference Include="Microsoft.Graph" Version="1.12.0" />
@@ -83,8 +83,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>SharedStrings.resx</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Update="Responses\Ticket\TicketResponses.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
