--- a/skills/csharp/experimental/newsskill/NewsSkill.csproj
+++ b/skills/csharp/experimental/newsskill/NewsSkill.csproj
@@ -7,18 +7,18 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.CognitiveServices.Search.NewsSearch" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.8.0-rc4" />
-	<PackageReference Include="Microsoft.Bot.Builder.LanguageGeneration" Version="4.8.0-rc4-preview" />
-    <PackageReference Include="Microsoft.Bot.Solutions" Version="0.9.0-daily248" />
-    <PackageReference Include="Microsoft.Bot.Builder.TemplateManager" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Configuration" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Connector" Version="4.8.0-rc4" />
-    <PackageReference Include="Microsoft.Bot.Schema" Version="4.8.0-rc4" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.8.1" />
+	  <PackageReference Include="Microsoft.Bot.Builder.LanguageGeneration" Version="4.8.1-rc0" />
+    <PackageReference Include="Microsoft.Bot.Solutions" Version="0.9.0-daily252" />
+    <PackageReference Include="Microsoft.Bot.Builder.TemplateManager" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Configuration" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Connector" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Bot.Schema" Version="4.8.1" />
   </ItemGroup>
 
   <ItemGroup>
