--- a/skills/declarative/calendarSkill/runtime/azurewebapp/Microsoft.BotFramework.Composer.WebApp.csproj
+++ b/skills/declarative/calendarSkill/runtime/azurewebapp/Microsoft.BotFramework.Composer.WebApp.csproj
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+    <UserSecretsId>de41ad3a-d8ae-4611-9b5c-82340374207a</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <None Include="ComposerDialogs\**">
@@ -16,18 +18,18 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.11.0-rc0" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.11.0-rc0" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.11.0-rc0" />
-    <PackageReference Include="Microsoft.Bot.Builder.ApplicationInsights" Version="4.11.0-rc0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.11.0-rc0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Declarative" Version="4.11.0-rc0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.11.0-rc0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Debugging" Version="4.11.0-rc0.preview" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.11.0-rc0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.11.0-rc0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.11.0-rc0" />
-    <PackageReference Include="Microsoft.Bot.Connector" Version="4.11.0-rc0" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.ApplicationInsights" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Declarative" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Debugging" Version="4.11.0-preview" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Connector" Version="4.11.1" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.66">
       <PrivateAssets>all</PrivateAssets>
