--- a/experimental/feeds/components.json
+++ b/experimental/feeds/components.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "Preview.ConversationalCore.GeneralIntent",
+    "name": "Preview.Bot.Component.GeneralIntent",
     "version": "0.0.1-preview1",
     "source": "nuget",
     "language": "c#",
@@ -11,7 +11,7 @@
     "description": "Dialogs to provide general intent handling - like help and cancel"
   },
   {
-    "name": "Preview.ConversationalCore.GreetingDialog",
+    "name": "Preview.Bot.Component.GreetingDialog",
     "version": "0.0.1-preview1",
     "source": "nuget",
     "language": "c#",
@@ -22,7 +22,7 @@
     "description": "Dialogs to provide a greeting experience"
   },
   {
-    "name": "Preview.ConversationalCore.OnboardingDialog",
+    "name": "Preview.Bot.Component.OnboardingDialog",
     "version": "0.0.1-preview1",
     "source": "nuget",
     "language": "c#",
@@ -33,7 +33,7 @@
     "description": "Dialogs to provide an onboarding experience"
   },
   {
-    "name": "Preview.ConversationalCore.UnknownIntentDialog",
+    "name": "Preview.Bot.Component.UnknownIntentDialog",
     "version": "0.0.1-preview1",
     "source": "nuget",
     "language": "c#",
