--- a/generators/generator-microsoft-bot-empty/package.json
+++ b/generators/generator-microsoft-bot-empty/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@microsoft/generator-microsoft-bot-empty",
   "version": "1.0.0",
+  "license": "ISC",
   "description": "",
   "main": "./generators/app/index.js",
   "dependencies": {
