--- a/packages/Welcome/Microsoft.Bot.Components.Welcome.nuspec
+++ b/packages/Welcome/Microsoft.Bot.Components.Welcome.nuspec
@@ -5,7 +5,8 @@
         <version>1.0.0</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<licenseUrl>https://github.com/Microsoft/BotBuilder/blob/master/LICENSE</licenseUrl>
+		<requireLicenseAcceptance>true</requireLicenseAcceptance>
         <releaseNotes>First version of welcome package</releaseNotes>
         <description>Dialogs to provide a Welcome experience for new and returning users</description>
         <tags>bf-components conversationalcore welcome preview</tags>
