--- a/packages/Calendar/Microsoft.Bot.Components.Calendar.csproj
+++ b/packages/Calendar/Microsoft.Bot.Components.Calendar.csproj
@@ -18,7 +18,7 @@
 	<PackageLicenseUrl>https://github.com/Microsoft/BotBuilder/blob/master/LICENSE</PackageLicenseUrl>
 	<RequireLicenseAcceptance>true</RequireLicenseAcceptance>
 	<PackageProjectUrl>https://github.com/Microsoft/botframework-components</PackageProjectUrl>   
-    <PackageTags>bf-components</PackageTags>
+    <PackageTags>bf-component;bf-components</PackageTags>
 	<SignAssembly>true</SignAssembly>
 	<AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
 	<DelaySign>true</DelaySign>
