--- a/packages/HelpAndCancel/Microsoft.Bot.Components.HelpAndCancel.nuspec
+++ b/packages/HelpAndCancel/Microsoft.Bot.Components.HelpAndCancel.nuspec
@@ -11,7 +11,7 @@
 		<projectUrl>https://github.com/Microsoft/botframework-components</projectUrl>
 		<releaseNotes>First version of HelpAndCancel package</releaseNotes>
         <description>Dialog to provide "help" and "cancel" utterance handling</description>
-        <tags>bf-components conversationalcore helpintent cancelintent preview</tags>
+        <tags>bf-component bf-components conversationalcore helpintent cancelintent preview</tags>
         <dependencies>
             <dependency id="Microsoft.Bot.Builder.Integration.Runtime" version="4.12.0-rc1.preview" />
         </dependencies>
