--- a/packages/Welcome/Microsoft.Bot.Components.Welcome.nuspec
+++ b/packages/Welcome/Microsoft.Bot.Components.Welcome.nuspec
@@ -11,7 +11,7 @@
 		<projectUrl>https://github.com/Microsoft/botframework-components</projectUrl>
 		<releaseNotes>First version of welcome package</releaseNotes>
         <description>Dialogs to provide a Welcome experience for new and returning users</description>
-        <tags>bf-components conversationalcore welcome preview</tags>
+        <tags>bf-component bf-components conversationalcore welcome preview</tags>
         <dependencies>
             <dependency id="Microsoft.Bot.Builder.Integration.Runtime" version="4.12.0-rc1.preview" />
         </dependencies>
