--- a/packages/Onboarding/Microsoft.Bot.Components.Onboarding.nuspec
+++ b/packages/Onboarding/Microsoft.Bot.Components.Onboarding.nuspec
@@ -11,7 +11,7 @@
         <projectUrl>https://github.com/Microsoft/botframework-components</projectUrl>
         <releaseNotes>first version of onboarding package</releaseNotes>
         <description>Dialogs to provide an onboarding experience</description>
-        <tags>bf-component conversationalcore onboarding preview</tags>
+        <tags>msbot-component msbot-content conversationalcore onboarding preview</tags>
         <dependencies>
             <dependency id="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" version="4.13.0-rc0" />
         </dependencies>
