--- a/generators/generator-bot-adaptive/package.json
+++ b/generators/generator-bot-adaptive/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "globby": "^11.0.2",
     "normalize-path": "^3.0.0",
-    "runtypes": "^5.0.2",
+    "runtypes": "~5.1.0",
     "uuid": "^8.3.1",
     "xml2js": "^0.4.23",
     "yeoman-generator": "^1.1.1"
