--- a/.github/workflows/lu-testing.yml
+++ b/.github/workflows/lu-testing.yml
@@ -15,6 +15,6 @@ jobs:
 
       - run: python ./main.py  build_test --name=EALuTest --output=./out --botname=EnterpriseAssistant --authoringkey=$Authoring_Key --region=westus --trainlu=../../../generators/generator-bot-enterprise-assistant/generators/app/templates/language-understanding\en-us\botName.en-us.lu --testlu=../tests/enterpriseassistant.tests.lu --dialog=multiLanguage --suffix=automation --authoringendpoint=https://eatest-authoring.cognitiveservices.azure.com/ --predictionkey=$Prediction_Key --predictionendpoint=https://eatest.cognitiveservices.azure.com/
         env:
-          Authoring_Key: ${{ secret.LUISAUTHORINGKEY }}
-          Prediction_Key: ${{ secret.LUISPREDICTIONKEY }}
+          Authoring_Key: ${{ secrets.LUISAUTHORINGKEY }}
+          Prediction_Key: ${{ secrets.LUISPREDICTIONKEY }}
         working-directory: ./tests/lu/code
